# knowrob-semantic-map-tools

./: .gitignore  CMakeLists.txt  changelog  package.xml  setup.py
config/: action_test.yaml  example_semantic_map.yaml  map_interaction.yaml  map_server.yaml  map_visualization.yaml  prolog_test.yaml  semantic_map.yaml  spawn_owl.yaml
handles/: door.dae
launch/: action_test.launch  map_interaction.launch  map_server.launch  map_visualization.launch  prolog_test.launch  spawn_owl.launch  spawn_owl_test.launch
launch/includes/: json_prolog.launch.xml  map_interaction.launch.xml  map_server.launch.xml  map_to_owl.launch.xml  map_visualization.launch.xml  rviz.launch.xml  spawn_owl.launch.xml
maps/: example.yaml
owl/: marker_interaction.owl  semantic_map.owl
prolog/: action_properties.pl  data_properties.pl  init.pl  marker_interaction.pl  marker_visualization.pl  object_properties.pl  owl_string_parser.pl  semantic_map.pl  task_properties.pl
rviz/: example.rviz  spawn_owl.rviz
src/knowrob_semantic_map_tools/: __init__.py
src/knowrob_semantic_map_tools/marker_interaction/: Server.py  __init__.py
src/knowrob_semantic_map_tools/marker_visualization/: Publisher.py  __init__.py
src/knowrob_semantic_map_tools/prolog/: Client.py  IRI.py  Query.py  __init__.py
src/knowrob_semantic_map_tools/prolog/queries/: Compound.py  Operator.py  __init__.py
src/knowrob_semantic_map_tools/prolog/queries/knowrob/: ActionOnObject.py  ActionProperty.py  AddObjectWithChildren.py  DataProperty.py  GetHandlePath.py  GetModelPath.py  HingedTo.py  InteractionFindChildren.py  InteractionObjectInfo.py  MapChildObjects.py  MapObjectFrame.py  MapObjectInfo.py  MapObjectStamp.py  MapObjectType.py  ObjectDimensions.py  ObjectPose.py  ObjectProperty.py  OwlHas.py  OwlHasDirect.py  (+7 more)
src/knowrob_semantic_map_tools/semantic_map/: Client.py  Server.py  __init__.py
src/knowrob_semantic_map_tools/semantic_map/action/: Publisher.py  Subscriber.py
src/knowrob_semantic_map_tools/semantic_map/generation/: Client.py  __init__.py
src/knowrob_semantic_map_tools/semantic_map/interaction/: Exception.py  Server.py  __init__.py
src/knowrob_semantic_map_tools/semantic_map/prolog/: Client.py  Exception.py
src/knowrob_semantic_map_tools/semantic_map/visualization/: Publisher.py  __init__.py
src/knowrob_semantic_map_tools/semantic_map_to_owl/: Client.py  __init__.py
(+12 files in other folders)
