<?xml version="1.0"?>
<package>
  <name>knowrob_semantic_map_tools</name>
  <version>0.1.0</version>
  <description>The knowrob_semantic_map_tools package</description>

  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosprolog</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_semantic_map_to_owl</run_depend>
</package>
