<?xml version="1.0"?>
<package>
  <name>knowrob_semantic_map_tools</name>
  <version>0.1.0</version>
  <description>
    A collection of tools for working with Knowrob semantic maps.
  </description>

  <maintainer email="ralf.kaestner@gmail.com">Ralf Kaestner</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosprolog</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>json_prolog_msgs</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_semantic_map_msgs</run_depend>
  <run_depend>knowrob_semantic_map_to_owl</run_depend>
  <run_depend>knowrob_vis</run_depend>
</package>
